--- a/web/src/main/webapp/resources/css/main.css
+++ b/web/src/main/webapp/resources/css/main.css
@@ -358,7 +358,7 @@ nav a:hover {
 
     pre,
     blockquote {
-        border: 1px solid #999;
+        border: 1px solid #cccccc;
         page-break-inside: avoid;
     }
 
