--- a/web/src/main/webapp/resources/css/style.css
+++ b/web/src/main/webapp/resources/css/style.css
@@ -73,6 +73,16 @@ h3 {
 
 }
 
+.page-controls {
+    padding: 4px;
+    margin-bottom: 10px;
+    border-bottom: cadetblue double;
+}
+
+.page-control {
+    margin-right: 10px;
+}
+
 
 .one-col-table .ui-column-filter {
 }
