--- a/web/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/web/src/main/webapp/WEB-INF/template/template.xhtml
@@ -76,7 +76,7 @@
                 <div class="sublink-container" id="sublinks">
 
                 </div>
-
+        		<h1>#{pageContext.pageHeader}</h1>
                 <ui:insert name="content">
 
                 </ui:insert>
