--- a/web/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/web/src/main/webapp/WEB-INF/template/template.xhtml
@@ -6,90 +6,95 @@
       xmlns:ds="http://deltaspike.apache.org/jsf">
 
 <h:head>
-         <f:facet name="first">
-             <h:outputStylesheet name="reset.css" library="css" />
+    <f:facet name="first">
+        <h:outputStylesheet name="reset.css" library="css"/>
 
-         </f:facet>
-    <h:outputStylesheet name="main.css" library="css" />
+    </f:facet>
+    <h:outputStylesheet name="main.css" library="css"/>
 
 </h:head>
 
-    <h:body>
-        <f:facet name="last">
-            <h:outputStylesheet name="style.css" library="css" id="style-last"/>
-        </f:facet>
-        <ds:windowId/>
-        <p style="visibility: hidden" id="media-setter" class="set-media"/>
-        <p:growl id="main-growl" widgetVar="growl" showDetail="true" sticky="true" autoUpdate="true"/>
-        <o:cache scope="session" time="1">
-            <div id="header">
-                <div id="b-container-siteHeader" class="ui-widget-header b-container-siteHeader">
-                    <div id="base">
+<h:body>
+    <f:facet name="last">
+        <h:outputStylesheet name="style.css" library="css" id="style-last"/>
+    </f:facet>
+    <ds:windowId/>
 
-                    </div>
-                    <div class="wrapper">
-                        <h:form>
-                            <p:menubar autoDisplay="false" model="#{navigationBean.model}" />
-                        </h:form>
-                    </div>
-                    <header class="wrapper clearfix">
-
-
-                        <h1 class="b-text-siteHeader title"
-                            id="b-text-siteHeader">Ref</h1>
-
-                        <div style="margin-top: 10px">
-                            <p:ajaxStatus id="ajaxStatusPanel">
-                                <f:facet name="start">
-                                    <div id="ajaxLoader">
-                                        <h:outputText value="w" style="color: #680fec; font-size: 100%"/>
-                                        <h:outputText value="a" style="color: #8d30ac; font-size: 100%"/>
-                                        <h:outputText value="i" style="color: #a543d9; font-size: 100%"/>
-                                        <h:outputText value="t" style="color: #c355ec; font-size: 100%"/>
-                                        <h:outputText value="." style="color: #d36bec; font-size: 300%"/>
-                                        <h:outputText value="." style="color: #d36bec; font-size: 300%"/>
-                                        <h:outputText value="." style="color: #d36bec; font-size: 300%"/>
-                                    </div>
-                                </f:facet>
-                            </p:ajaxStatus>
-                        </div>
-                    </header>
-
-                    <ui:insert name="header">
-                    </ui:insert>
-                </div>
-            </div>
-        </o:cache>
-<!--        <p:socket onMessage="newNotification" channel="#{channel}" rendered="#{channel != null}"/>
-        <p:socket onMessage="newNotification" channel="/notifications"/>    -->
-
-        <h:panelGroup id="mainBody">
-            <ui:insert name="resources">
-
-            </ui:insert>
-            <o:cache scope="session">
-            </o:cache>
-            <ui:insert name="first-content">
-            </ui:insert>
-
-            <div class="main-container main wrapper clearfix header-container">
-                <div class="sublink-container" id="sublinks">
+    <p style="visibility: hidden" id="media-setter" class="set-media"/>
+    <p:growl id="main-growl" widgetVar="growl" showDetail="true" sticky="true" autoUpdate="true"/>
+    <o:cache scope="session" time="1">
+        <div id="header">
+            <div id="b-container-siteHeader" class="ui-widget-header b-container-siteHeader">
+                <div id="base">
 
                 </div>
-        		<h1>#{pageContext.pageHeader}</h1>
-                <ui:insert name="content">
+                <div class="wrapper">
+                    <p:menubar autoDisplay="false" model="#{navigationBean.model}" style="margin-bottom: 15px"/>
 
+
+                </div>
+                <header class="wrapper clearfix">
+                        <ui:repeat value="#{pageContext.nodes}" var="node">
+                            <h:link value="#{bundleBean.getText(node.permissionName)}" outcome="#{node.definition.toString()}" style="margin-right: 10px" styleClass="#{pageContext.systemNode == node ? 'current-page-link' : 'page-link'}"/>
+                        </ui:repeat>
+                                 <div style="padding-bottom: 10px">
+
+                                 </div>
+                    <h1 class="b-text-siteHeader title"
+                        id="b-text-siteHeader">Ref</h1>
+
+                    <div style="margin-top: 10px">
+                        <p:ajaxStatus id="ajaxStatusPanel">
+                            <f:facet name="start">
+                                <div id="ajaxLoader">
+                                    <h:outputText value="w" style="color: #680fec; font-size: 100%"/>
+                                    <h:outputText value="a" style="color: #8d30ac; font-size: 100%"/>
+                                    <h:outputText value="i" style="color: #a543d9; font-size: 100%"/>
+                                    <h:outputText value="t" style="color: #c355ec; font-size: 100%"/>
+                                    <h:outputText value="." style="color: #d36bec; font-size: 300%"/>
+                                    <h:outputText value="." style="color: #d36bec; font-size: 300%"/>
+                                    <h:outputText value="." style="color: #d36bec; font-size: 300%"/>
+                                </div>
+                            </f:facet>
+                        </p:ajaxStatus>
+                    </div>
+                </header>
+
+                <ui:insert name="header">
                 </ui:insert>
             </div>
-            <!-- 	<div class="floater"></div> -->
-            <div class="ui-widget-header">
-                <footer class="wrapper">
-                    <ui:insert name="footer">
-                        <h3>footer</h3>
-                    </ui:insert>
-                </footer>
+        </div>
+    </o:cache>
+    <!--        <p:socket onMessage="newNotification" channel="#{channel}" rendered="#{channel != null}"/>
+            <p:socket onMessage="newNotification" channel="/notifications"/>    -->
+
+    <h:panelGroup id="mainBody">
+        <ui:insert name="resources">
+
+        </ui:insert>
+        <o:cache scope="session">
+        </o:cache>
+        <ui:insert name="first-content">
+        </ui:insert>
+
+        <div class="main-container main wrapper clearfix header-container">
+            <div class="sublink-container" id="sublinks">
+
             </div>
-        </h:panelGroup>
-    </h:body>
+            <h1>#{pageContext.pageHeader}</h1>
+            <ui:insert name="content">
+
+            </ui:insert>
+        </div>
+        <!-- 	<div class="floater"></div> -->
+        <div class="ui-widget-header">
+            <footer class="wrapper">
+                <ui:insert name="footer">
+                    <h3>footer</h3>
+                </ui:insert>
+            </footer>
+        </div>
+    </h:panelGroup>
+</h:body>
 
 </html>
